[package]
name = "linkerd2-connection-header"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
bytes = "0.5"
linkerd2-conditional = { path = "../conditional" }
linkerd2-dns-name = { path = "../dns/name" }
linkerd2-error = { path = "../error" }
linkerd2-io = { path = "../io" }
linkerd2-proxy-transport = { path = "../proxy/transport" }
prost = "0.6"
tokio = { version = "0.2", features = ["time"] }

[build-dependencies]
prost-build = { version = "0.6", default-features = false }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
tokio-test = "0.2"
